# kimi-coding-agent

./: .gitignore  =  AGENTS.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
codex_chopan_app/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
codex_chopan_app/config/: celery.toml  default_config.toml  openapi.yaml
codex_chopan_app/docs/: architecture.md  compliance.md
codex_chopan_app/docs/adr/: 0001-architecture.md
codex_chopan_app/frontend/app/: page.tsx
codex_chopan_app/frontend/components/: SummaryCard.tsx
codex_chopan_app/frontend/styles/: globals.css
codex_chopan_app/infra/cdk/: app.py
codex_chopan_app/infra/cdk/stacks/: ecs_stack.py  network_stack.py
codex_chopan_app/infra/docker/: Dockerfile.api
codex_chopan_app/infra/github-actions/: ci.yml
codex_chopan_app/infra/terraform/: main.tf
codex_chopan_app/ops/runbooks/: incident_response.md  rate_limit_playbook.md  rollback.md
codex_chopan_app/scripts/: db_migrate.py  snapshot_create.py  snapshot_restore.py
codex_chopan_app/services/api_gateway/: auth.py  main.py  models.py  rate_limiter.py  routes.py
codex_chopan_app/services/content/: db.py  main.py  moderation.py  openai_client.py
codex_chopan_app/services/content/templates/: default.txt
codex_chopan_app/services/email/: db.py  mailgun_client.py  main.py  sendgrid_client.py  webhooks.py
codex_chopan_app/services/prospect/: cse_client.py  db.py  features.py  main.py  robots.py  scoring.py  snapshot_s3.py
codex_chopan_app/services/social/: db.py  linkedin_client.py  main.py  meta_client.py  scheduler.py
codex_chopan_app/services/worker/: celery_app.py  queues.py  tasks.py
codex_chopan_app/tests/api/: test_gateway.py
codex_chopan_app/tests/content/: test_content_service.py
codex_chopan_app/tests/email/: test_email_service.py
codex_chopan_app/tests/prospect/: test_prospect_service.py
codex_chopan_app/tests/social/: test_social_service.py
codex_chopan_app/tests/worker/: test_tasks.py
docs/: agent_project_plan.json  coding-agent-rfc.md  implementation_plan.md  spec.md  spec_2.md  sprint-1-runbook.md
projects/etl/: README.md
projects/fastapi/: README.md
projects/ml/: README.md
projects/nextjs/: README.md  (+1 more)
tests/: conftest.py  test_chopan_suite.py  test_cli.py  test_command_runner.py  test_openai_client.py  test_orchestrator.py  test_pipeline.py  test_run_controller.py  test_schema_validation.py
var/: runs.sqlite
(+76 files in other folders)
