[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kimi-coding-agent"
version = "0.1.0"
description = "Local-first multi-agent coding orchestrator"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Kimi Coding Team"}]
dependencies = [
    "click==8.1.7",
    "pydantic==2.12.2",
    "sqlalchemy==2.0.44",
    "openai==2.4.0",
    "rich==14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==5.0.0",
    "black==24.10.0",
    "ruff==0.7.3",
]

[project.scripts]
agent = "kimi_coding_agent.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
