[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kimi-agent"
version = "0.1.0"
description = "Local-first multi-agent coding assistant CLI (Sprint 1 skeleton)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Kimi Agent Team"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1.7",
    "openai>=1.50.2",
]

[project.scripts]
agent = "kimi_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
