[project]
name = "chopan-ai-outreach-assistant"
version = "1.0.0"
description = "Microservices outreach and storytelling assistant"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.119.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.11.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
